# seqbench

./: .gitignore  Makefile  README.md
arch/common/: checkpoint.hpp  checkpoint_test.cpp  runner.hpp
arch/deltanet/: CMakeLists.txt  README.md  deltanet_model.cpp  deltanet_model.hpp  deltanet_test.cpp  train_deltanet.cpp
arch/fast-weights/: CMakeLists.txt  README.md  fast_weights_model.cpp  fast_weights_model.hpp  fw_test.cpp  train_fw.cpp
arch/gru/: CMakeLists.txt  README.md  gru_model.cpp  gru_model.hpp  gru_test.cpp  train_gru.cpp
docs/superpowers/plans/: 2026-06-18-fast-weights-learned.md  2026-06-18-fast-weights.md  2026-06-18-seqbench-bench.md  2026-06-18-train-on-task-diagnostics.md  2026-06-19-gru-shared-runner.md  2026-06-21-stacked-deltanet.md  2026-06-22-resumable-checkpointing.md  2026-06-23-deltanet-ablation-battery.md
docs/superpowers/specs/: 2026-06-18-fast-weights-design.md  2026-06-18-fast-weights-learned-design.md  2026-06-18-seqbench-design.md  2026-06-18-train-on-task-diagnostics-design.md  2026-06-19-gru-shared-runner-design.md  2026-06-21-stacked-deltanet-design.md  2026-06-22-resumable-checkpointing-design.md  2026-06-23-deltanet-ablation-battery-design.md
include/seqbench/: byte_span.hpp  context_model.hpp  corpus.hpp  diagnostics.hpp  experiment.hpp  metric.hpp  model.hpp  sweep.hpp
models/: context_model.cpp
runs/: parity_learnability.jsonl  results.jsonl
src/: corpus.cpp  diagnostics.cpp  experiment.cpp  metric.cpp  sweep.cpp
tests/: byte_span_test.cpp  context_model_test.cpp  corpus_test.cpp  diagnostics_test.cpp  experiment_test.cpp  integration_test.cpp  metric_test.cpp  runloop_test.cpp  sweep_test.cpp  test_util.hpp
tools/: bench.cpp  sweep_cli.cpp
